// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField deve renderizar corretamente 1`] = `
<div>
  <div />
</div>
`;

exports[`FormField deve renderizar o label 1`] = `
<div>
  <Spacing
    bottom={0.5}
  >
    <FormLabel
      label="label teste"
    />
  </Spacing>
  <div />
</div>
`;

exports[`FormField deve renderizar os filhos 1`] = `
<div>
  <div>
    <Input
      type="text"
    />
  </div>
</div>
`;
